--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,8 @@
         <title>Latihan GIT</title>
     </head>
     <body>
-        <h1>Latihan GIT di Camp404</h1>
-        <p>Tingkatkan skill disini</p>
+        <h1>Program GIT di Camp404</h1>
+        <p>Klik Daftar untuk Tingkatkan skillmu</p>
+        <button>Daftar</button>
     </body>
 </html>
